[DIALOGS][LIST] Fix small scren compatibility issues with dialogs having lists - remove overflow property from list-group otherwise dropdowns do not come properly - Restructure lead editor dialog to place lead edit box inside list item. This saves a lot of space and provides extra space for list items in the dialog - Fix address dropdown cut off issue by making column as overflowing and fixing max width of dropdown - Update classes accordingly in Live tracking dialog - Add white input box to show on blue background

--- a/src/main/webapp/css/core/input.css
+++ b/src/main/webapp/css/core/input.css
@@ -40,6 +40,28 @@ input[type=number]::-webkit-outer-spin-button {
     border-color: #37bcf2;
 }
 
+.input-white {
+    color: white;
+    border-color: white;
+}
+
+.input-white::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    white;
+    opacity: 0.5;
+}
+.input-white:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color:    white;
+    opacity: 0.5;
+}
+.input-white::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color:    white;
+    opacity: 0.5;
+}
+.input-white:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color:    white;
+    opacity: 0.5;
+}
+
 input.img-icon:hover {
     border: 1px solid grey;
 }
